Bug 816614 - Restore the previous behavior of ContentChild::IsForApp/Browser(). r=jlebar, a=cjones