dom/ipc/ContentChild.h
@@ -42,7 +42,6 @@ class PStorageChild;
 class ClonedMessageData;
 
 class ContentChild : public PContentChild
-                   , public TabContext
 {
     typedef mozilla::dom::ClonedMessageData ClonedMessageData;
     typedef mozilla::ipc::OptionalURIParams OptionalURIParams;
@@ -203,6 +202,9 @@ public:
     nsString &GetIndexedDBPath();
 
     uint64_t GetID() { return mID; }
+
+    bool IsForApp() { return mIsForApp; }
+    bool IsForBrowser() { return mIsForBrowser; }
 
     bool GetParamsForBlob(nsDOMFileBase* aBlob,
                           BlobConstructorParams* aOutParams);
